# RAD_dark

./: .gitignore  README.md  accelerate_config.yaml  collect.py  dataset.py  evaluate.py  export_fig.py  pyproject.toml  train.py  utils.py
CAD/: .gitignore  README.md  accelerate_config.yaml  collect.py  compare_eval.py  dataset.py  evaluate.py  evaluate_cad.py  plot_avg_episode.py  pyproject.toml  run_latent_ablation.py  train.py  train_cad.py  train_pretrain_compression.py  train_transit_ablation.py  train_transit_ablation_parallel.py  utils.py
CAD/algorithm/: __init__.py  ppo.py  utils.py
CAD/config/algorithm/: ppo_dark_key_to_door.yaml  ppo_darkroom.yaml
CAD/config/env/: dark_key_to_door.yaml  darkroom.yaml
CAD/config/model/: ad_dktd.yaml  ad_dr.yaml  cad_dktd.yaml  cad_dr.yaml  cad_dr_latent16.yaml  cad_dr_latent24.yaml  cad_dr_latent32.yaml  cad_dr_latent48.yaml  cad_dr_latent8.yaml  cad_dr_transit120.yaml  cad_dr_transit30.yaml  cad_dr_transit45.yaml  cad_dr_transit60.yaml  cad_dr_transit90.yaml  cad_from_ad_dr.yaml  cad_pretrain.yaml  cad_pretrain_dktd.yaml
CAD/env/: __init__.py  darkroom.py  dktd.py
CAD/model/: __init__.py  ad.py  compressed_ad.py  compression.py  gpt2.py
algorithm/: ppo.py  utils.py
config/algorithm/: ppo_base.yaml  ppo_darkroom.yaml
config/model/: ad_base.yaml  ad_dr.yaml  rad_dr.yaml
env/: __init__.py  darkroom.py
model/: __init__.py  ad.py  compression.py  rad.py
